2005-04-20  Adam Fedor  <fedor@gnu.org>

	* Fonts/GNUmakefile.postamble: Make sure to install in 
	$(GNUSTEP_INSTALLATION_DIR).
	* GNUmakefile: Add check to not install fonts if fonts=no.
	Fixes bug #12749

2005-04-19  Adam Fedor  <fedor@gnu.org>

	* Source/art/path.m ([ARTGState -_stroke:]): Change floorf->floor.
	Fixes bug #12731.

2005-04-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m
	(-_compositeGState:sourcefromRect:fromRecttoPoint:toPointop:opfraction:]): 
	New way to compute drect. This fixes bug #12459.

2005-04-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m  (-iconSize): Use XFree to free
	xiconsize. Fixes bug #12578.

2005-04-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/winlib/WIN32GState.m: tunr on alpha blending and swap colors
	to correct format.

2005-04-01  Adam Fedor  <fedor@gnu.org>

	* Source/win32/WIN32Server.m: Re-add 2005-02-23 change.

	* Source/xlib/GSXftFontInfo.m (-setupAttributes): Make log message
	more verbose.

2005-04-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGDragView.m: Complete code changes to factor out as
	much as possible into the superclass and avoid duplication.

2005-03-30  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.5

	* Headers/x11/XGDragView.h, Source/x11/XGDragView.m: Tag previous 
	version of file for release.
	* Source/win32/WIN32Server.m: Revert 2005-02-23 change for this release.

2005-03-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/x11/XGDragView.h: Make this a subclass of GSDragView
	* Source/x11/XGDragView.m: Rewrite to be a subclass of GSDragView
	so that bugfixes from it are in  XGDragView.  Remove lots of
	redundant code.  Still quite a bit to do.
	* Source/win32/WIN32Server.m: Add code to draw own window decorations
	and GSWIN32HandlesWindowDecorations user default to turn it off.
	Fixed code for detecting window at a screen point to ignore invisible
	windows (fixes crash in DnD).